# tinyswiftc

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  TODO.md  example.swift  lexer.cpp  lexer.h  main.cpp  output.ll  readme.md  test.sh
.github/: copilot-instructions.md
AST/: ASTNode.h  ArgumentNode.h  BinaryOpNode.h  ExprNode.h  FileASTNode.h  FunctionBodyNode.h  FunctionCallNode.h  FunctionNode.h  FunctionSignatureNode.h  IntNode.h  ReturnNode.h  VariableNode.h
Lexer/: Lexer.cpp  Lexer.h
Parser/: Parser.cpp  Parser.h
Parser/AST/: ASTNode.h  ArgumentAST.h  ArgumentNode.h  ExprAST.h  ExprNode.h  FileASTNode.h  FunctionAST.h  FunctionBodyAST.h  FunctionBodyNode.h  FunctionCallAST.h  FunctionCallNode.h  FunctionNode.h  FunctionSignatureAST.h  FunctionSignatureNode.h  IntAST.h  IntNode.h  ReturnAST.h  ReturnNode.h  VariableAST.h  VariableNode.h
Util/: debug_log.cpp  debug_log.h
